refa:fixed alignement issues and added info card with social links

--- a/src/app/glass-ui/glass-ui.component.scss
+++ b/src/app/glass-ui/glass-ui.component.scss
@@ -36,7 +36,7 @@
 
     .glass{
         div{
-            max-width: 17.8em;
+            max-width: 18.8em;
             @include flex(row,center,space-between);
         }
         button{
@@ -151,6 +151,29 @@
         }
 }
 
+.info-div{
+    @include flex(column,flex-start,center);
+}
+.social-btns{
+    @include flex(row,center,space-between);
+}
+.glass-button{
+    text-align: center;
+    padding:0.5rem 1rem;
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    color:white;
+    transition: all 0.2s linear;
+
+    &:hover{
+        background-color: rgba(255, 255, 255, 0.7);
+        text-decoration: none;
+        color:black;
+        cursor: pointer;
+    }
+}
+
 .imgUrlError{
     border:1px solid rgba(255,0,0,0.5) !important;
 }
@@ -182,6 +205,7 @@ code{
     @include flex(column,center,center);
     background: rgba(255,255,255,0.3);
     padding: 1rem;
+    width: 25em !important;
     max-width: 25em;
     max-height: 15em;
     border-radius: 8px;
