--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,10 @@ body {
   box-sizing: border-box !important;
 }
 
-p {margin-bottom: 1rem;}
+p {
+  margin: 2rem auto;
+  font-size: 0.95rem;
+}
 
 h1, h2, h3, h4, h5 {
   font-family: 'Inter', sans-serif;
